--- a/.github/workflows/javac.yml
+++ b/.github/workflows/javac.yml
@@ -20,5 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Preparing for build
+      run: cd EQDietDownloader1.0-src/src
     - name: Build with javac
-      run: javac -verbose EQDietDownloader1.0-src/src/EQDietDownloader.java
+      run: javac -verbose EQDietDownloader.java
