Fixed another error in azure-pipelines.yml

--- a/.github/azure-pipelines/azure-pipelines.yml
+++ b/.github/azure-pipelines/azure-pipelines.yml
@@ -6,16 +6,16 @@ pool:
 
 steps:
 - script: |
-    cd EQDietDownloader-src
+    cd EQDietDownloader1.0-src
     EQDietCompiler.bat /compile
   displayName: 'Building class files through EQDiet Compiler'
 
 - script: |
-    cd EQDietDownloader-src
+    cd EQDietDownloader1.0-src
     EQDietCompiler.bat /jar
   displayName: 'Building JAR file through EQDiet Compiler'
   
 - script: |
-    cd EQDietDownloader-src
+    cd EQDietDownloader1.0-src
     EQDietCompiler.bat /launch4j
   displayName: 'Test: Trying to install Launch4j through EQDiet Compiler'
