Moved source files to root directory

--- a/.github/azure-pipelines/azure-pipelines.yml
+++ b/.github/azure-pipelines/azure-pipelines.yml
@@ -8,24 +8,18 @@ jobs:
     vmImage: 'windows-latest'
 
   steps:
-  - script: |
-      cd EQDietDownloader1.0-src
-      EQDietCompiler.bat /compile
+  - script: EQDietCompiler.bat /compile
     displayName: 'Building class files through EQDiet Compiler'
 
-  - script: |
-      cd EQDietDownloader1.0-src
-      EQDietCompiler.bat /jar
+  - script: EQDietCompiler.bat /jar
     displayName: 'Building JAR file through EQDiet Compiler'
   
-  - script: |
-      cd EQDietDownloader1.0-src
-      EQDietCompiler.bat /launch4j
+  - script: EQDietCompiler.bat /launch4j
     displayName: 'Test: Trying to install Launch4j through EQDiet Compiler'
 
   - task: PublishPipelineArtifact@1
     inputs:
-      targetPath: '$(Pipeline.Workspace)\s\EQDietDownloader1.0-src\Release\EQDietDownloader.jar'
+      targetPath: '$(Pipeline.Workspace)\s\Release\EQDietDownloader.jar'
       artifact: 'EQDiet Downloader 1.0 JAR file'
       publishLocation: 'pipeline'
     displayName: 'Publishing Pipeline Artifacts'
