--- a/.github/workflows/EQDietCompiler.yml
+++ b/.github/workflows/EQDietCompiler.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         java-version: 1.8
     - name: Building class files through EQDiet Compiler
-      run: cd EQDietDownloader1.0-src && cmd /c EQDietCompiler.bat /compile
+      run: cmd /c EQDietCompiler.bat /compile
     - name: Building JAR file through EQDiet Compiler
-      run: cd EQDietDownloader1.0-src && cmd /c EQDietCompiler.bat /jar
+      run: cmd /c EQDietCompiler.bat /jar
     - name: "Test: Installing Launch4j through EQDiet Compiler"
-      run: cd EQDietDownloader1.0-src && cmd /c EQDietCompiler.bat /launch4j
+      run: cmd /c EQDietCompiler.bat /launch4j
